--- a/markup/listgroup.html
+++ b/markup/listgroup.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</header>
-		<main id="site__main" class="site__main ">
+		<main id="site__main" class="site__main">
 			<aside class="worksidebar">
 				<form class="general--form pnlsearch__form">
 					<div class="form__set">
@@ -138,68 +138,100 @@
 			</aside>
 			<section class="workboard">
 				<div class="workboard__heading">
-					<h1 class="workboard__title">Add Group</h1>
+					<h1 class="workboard__title">List Group</h1>
 				</div>
 				<div class="workpanel">
-					<form class="general--form access__form">
-						<div class="overall-info">
-							<div class="row">
-								<div class="col xs-12">
-									<div class="info">
-										<div class="row">
-											<div class="col xs-12 sx-6">
-												<span>Add User Group</span>
+					<div class="meta-info">
+						<div class="row">
+							<div class="col xs-12 sm-6">
+								<div class="dropdown">
+									<select name="" id="">
+										<option value="">September, 2024 </option>
+										<option value="">October, 2024 </option>
+										<option value="">November, 2024 </option>
+										<option value="">December, 2024 </option>
+										<option value="">January, 2024 </option>
+										<option value="">Feburary, 2024 </option>
+										<option value="">March, 2024 </option>
+										<option value="">April, 2024 </option>
+										<option value="">May, 2024 </option>
+										<option value="">June, 2024 </option>
+										<option value="">July, 2024 </option>
+										<option value="">August, 2024 </option>
+									</select>
+								</div>
+							</div>
+							<div class="col xs-12 sm-6">
+								<form action="get">
+									<div class="site-panel">
+										<div class="form__module">
+											<div class="form__action">
+												<span class="icon-add"></span><input type="submit" class="button primary-tint" value="Add Group">
 											</div>
-											<div class="col xs-12 sx-6">
-												<form action="get">
-													<div class="site-panel">
-														<div class="form__action">
-															<input type="submit" class="button tertiary-line" value="Discard">
-														</div>
-														<div class="form__action">
-															<input type="submit" class="button primary-tint" value="Save">
-														</div>
-													</div>
-												</form>
-											</div>
+										</div>
+										<div class="downoad">
+											<a href=""><span class="icon-download"></span>Download</a>
 										</div>
 									</div>
-									<div class="row">
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="prodname" class="form__label">Group Name</label>
-												<div class="form__set">
-													<input type="text" id="prodname" placeholder="Group Name">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="saleqty" class="form__label">Group Level</label>
-												<div class="form__set">
-													<input type="tel" id="saleqty" placeholder="Group Level">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="saletot" class="form__label">Status</label>
-												<div class="form__set">
-													<select name="" id="">
-														<option value="">Active </option>
-														<option value="">In-Active </option>
-													</select>
-												</div>
-											</div>
-										</div>
+								</form>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col xs-12">
+								<div class="questionaries__showcase" id="question_popup" style="display: flex;">
+									<div class="tbl-wrap">
+										<table id="tracking__table">
+											<thead>
+												<tr>
+													<th class="dtser">S.N</th>
+													<th class="name">Group Name</th>
+													<th class="username">Level</th>
+													<th class="status">Status</th>
+													<th class="action">Action</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td data-label="S.N">11</td>
+													<td data-label="Group Name">Admin</td>
+													<td data-label="Level">Level</td>
+													<td data-label="Status">ACTIVE</td>
+													<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="S.N">11</td>
+													<td data-label="Group Name">Special</td>
+													<td data-label="Level">Level</td>
+													<td data-label="Status">ACTIVE</td>
+													<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="S.N">11</td>
+													<td data-label="Group Name">User</td>
+													<td data-label="Level">Level</td>
+													<td data-label="Status">ACTIVE</td>
+													<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+											</tbody>
+										</table>
 									</div>
+									</div><!-- 
+									<div class="pagination">
+										<ul class="paging">
+											<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
+											<li><a href="#">1</a></li>
+											<li><a href="#">2</a></li>
+											<li><a href="#">3</a></li>
+											<li><a href="#">4</a></li>
+											<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
+										</ul>
+									</div> -->
 								</div>
 							</div>
 						</div>
-					</form>
-				</div>
-			</section>
-		</main>
-	</div>
-</body>
-</html>
+					</div>
+				</section>
+			</main>
+		</div>
+	</body>
+	</html>
